# src/main/resources/swagger-rh.yaml
@@ -12,6 +12,52 @@ tags:
     description: "Tout sur les régions"
 paths:
   /regions:
+    put:
+      tags:
+        - regions
+      summary: modifier une region en DB"
+      operationId: "updateRegions"
+      requestBody:
+        description: ""
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegionsDto'
+      responses:
+        "200":
+          description: "Opération réussie"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegionsDto'
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Region not found"
+        "405":
+          description: "Validation exception"
+    post:
+      tags:
+        - regions
+      summary: "Ajouter une region en DB"
+      operationId: "addRegions"
+      requestBody:
+        description: ""
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/RegionsDto'
+      responses:
+        "200":
+          description: "Opération réussie"
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/RegionsDto'
+        "405":
+          description: "Invalid input"
     get:
       tags:
         - regions
@@ -56,6 +102,28 @@ paths:
                 $ref: '#/components/schemas/RegionsDto'
         "404":
           $ref: '#/components/responses/NotFound'
+
+    delete:
+      tags:
+        - regions
+      summary: "Recherche un region par son id"
+      description: ""
+      operationId: deleteRegionsById
+
+      parameters:
+        - name: "id"
+          in: "path"
+          description: "Identifiant de la regions"
+          required: true
+          schema:
+            type: "integer"
+            format: "int64"
+            minimum: 1
+      responses:
+        "400":
+          description: "Invalid ID supplied"
+        "404":
+          description: "Pet not found"
 
 components:
   responses:
